Manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-test
  labels:
    istio-injection: enabled
