Manifests/deploy_ver1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v1
  namespace: canary-test
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
        version: v1
    spec:
      containers:
      - name: hello-app
        image: williamt1997/helloapp:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
