Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: canary-test
spec:
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
