Manifests/gateway.yaml
apiVersion: networking.istio.io/v1
kind:  Gateway
metadata:
  name: http-gateway
  namespace: canary-test
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"
