Manifests/destionation_rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: hello-app
  namespace: canary-test
spec:
  host: hello-app
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
